--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-scroll": "^1.9.0",
     "typewriter": "^9.1.0",
     "typewriter-effect": "^2.21.0"
   },
