--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase": "^10.8.0",
+    "navigate": "^0.3.6",
     "nodemailer": "^6.9.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-router-dom": "^6.23.0",
     "react-scroll": "^1.9.0",
     "typewriter": "^9.1.0",
     "typewriter-effect": "^2.21.0"
