--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emoji-mart/react": "^1.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "emoji-react": "^0.0.1",
     "express": "^4.18.2",
     "firebase": "^10.8.0",
     "navigate": "^0.3.6",
@@ -21,6 +23,8 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.23.0",
     "react-scroll": "^1.9.0",
+    "swiper": "^11.1.15",
+    "twemoji": "^14.0.2",
     "typewriter": "^9.1.0",
     "typewriter-effect": "^2.21.0"
   },
